Corrected transition 'delay' to 'duration' and made overflow:hidden part of the initialization (not required in CSS).

--- a/examples/styles.css
+++ b/examples/styles.css
@@ -39,7 +39,6 @@ html>body #left {
 
 #middle {
 	margin: 24px 20px 20px 190px;
-	overflow: hidden;
 }
 
 #middle .view {
